Motor control, optimisations everywhere
Harder, better, faster, stronger. It's fully fledged!
* Moved to a NoSQL database, since connecting to Postgres everytime I needed an access token was probably one of the more atrocious slow downs (A PSQL model is still there, if you're that kinda person).
* It also no longer crashes after 10 minutes, since I now use stdin IPC instead of calling the script, reading and writing to a file every single time I made a request.
* Runs on port 80 by default
* Registration page
* Guest account (id 2) that can't access anything other than the camera feed
* MJPEG timeout improved
* Removed clock
* Added close button to error dialog
* Restart server button

--- a/public/assets/css/interface.css
+++ b/public/assets/css/interface.css
@@ -55,7 +55,7 @@ main {
     top:0;
     bottom:0;
     margin:auto 0;
-    padding-top:12%;
+    padding-top:10.5%;
 }
 .move-robot-control {
     width:64px;
@@ -85,6 +85,10 @@ main {
     z-index:999;
     width:100%;
     cursor:pointer;
+}
+
+.image-port.fullscreen .image-feed {
+    height:100%;
 }
 
 @keyframes rotate360 {
