Added experimental WebSocket motor control system
I spent the better part of the last two days trying to make it as robust and easy to work with as possible, but in the end I probably never needed it. Oh well, it's a pretty cool thing to implement anyway.
I separated some parts of the auth to make it easier to authenticate without needing a full HTTP request, and tweaked the Python motor controller to work like one expects.

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -21,7 +21,7 @@
 <script>
     $(function () {
         if (query.error || query.error_type) {
-            $(".error-message").addClass("show").html("An error occured.");
+            $(".error-message").addClass("show").html("An error occurred.");
         }
 
         $("#register-form").show().on("submit", function (event) {
